Analizador Julia/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> statementList
Rule 3     statementList -> statement
Rule 4     statementList -> statementList statement
Rule 5     statement -> ID ASSIGN expression
Rule 6     statement -> using libreries
Rule 7     statement -> ID ASSIGN stringList
Rule 8     statement -> ID ASSIGN boolean
Rule 9     statement -> ID ASSIGN array
Rule 10    statement -> if conditionList statementList end
Rule 11    statement -> if conditionList statementList else statementList end
Rule 12    statement -> if conditionList statementList elseifList else statementList end
Rule 13    statement -> for iterable statementList end
Rule 14    statement -> while conditionList statementList end
Rule 15    statement -> printList LPARENT stringList RPARENT
Rule 16    statement -> printList LPARENT expression RPARENT
Rule 17    statement -> printList LPARENT boolean RPARENT
Rule 18    statement -> ID ASSIGN readline LPARENT RPARENT
Rule 19    statement -> ID LSQUARE arrayIdList RSQUARE ASSIGN expression
Rule 20    statement -> ID LSQUARE arrayIdList RSQUARE ASSIGN stringList
Rule 21    statement -> ID LSQUARE arrayIdList RSQUARE ASSIGN boolean
Rule 22    statement -> ID LSQUARE arrayIdList RSQUARE ASSIGN array
Rule 23    statement -> ID
Rule 24    statement -> ID assigList expression
Rule 25    statement -> ID LSQUARE arrayIdList RSQUARE assigList expression
Rule 26    statement -> printList LPARENT array RPARENT
Rule 27    statement -> funcList LPARENT optionList RPARENT
Rule 28    statement -> funcVecList LPARENT optionList RPARENT
Rule 29    arrayIdList -> expression COMMA expression
Rule 30    arrayIdList -> expression
Rule 31    libreries -> Statistics
Rule 32    libreries -> StatsBase
Rule 33    iterable -> ID ASSIGN expression TWODOT expression
Rule 34    iterable -> expression in expression
Rule 35    elseifList -> elseif conditionList statementList
Rule 36    elseifList -> elseifList elseif conditionList statementList
Rule 37    conditionList -> condition
Rule 38    conditionList -> conditionList logicRelation condition
Rule 39    condition -> comparables relation comparables
Rule 40    condition -> NOT comparables
Rule 41    comparables -> expression
Rule 42    comparables -> stringList
Rule 43    comparables -> boolean
Rule 44    comparables -> array
Rule 45    relation -> EQUAL
Rule 46    relation -> NE
Rule 47    relation -> LT
Rule 48    relation -> GT
Rule 49    relation -> LTE
Rule 50    relation -> GTE
Rule 51    logicRelation -> AND
Rule 52    logicRelation -> OR
Rule 53    assigList -> ASSIGPLUS
Rule 54    assigList -> ASSIGMINUS
Rule 55    printList -> println
Rule 56    printList -> print
Rule 57    printList -> SHOW
Rule 58    expression -> term
Rule 59    expression -> addingOperator term
Rule 60    expression -> expression addingOperator term
Rule 61    addingOperator -> PLUS
Rule 62    addingOperator -> MINUS
Rule 63    term -> factor
Rule 64    term -> term multiplyingOperator factor
Rule 65    funcList -> sin
Rule 66    funcList -> cos
Rule 67    funcList -> exp
Rule 68    funcList -> log
Rule 69    funcList -> abs
Rule 70    funcList -> sqrt
Rule 71    funcList -> round
Rule 72    funcList -> sign
Rule 73    funcList -> rand
Rule 74    funcList -> zeros
Rule 75    funcList -> parse
Rule 76    funcList -> string
Rule 77    multiplyingOperator -> TIMES
Rule 78    multiplyingOperator -> DIVIDE
Rule 79    multiplyingOperator -> EXPO
Rule 80    multiplyingOperator -> MOD
Rule 81    factor -> ID
Rule 82    factor -> NUMBER
Rule 83    factor -> LPARENT optionList RPARENT
Rule 84    factor -> FLOAT
Rule 85    factor -> ID LSQUARE expression RSQUARE
Rule 86    factor -> funcList LPARENT optionList RPARENT
Rule 87    factor -> funcVecList LPARENT optionList RPARENT
Rule 88    optionList -> expression
Rule 89    optionList -> expression COMMA expression
Rule 90    optionList -> array
Rule 91    optionList -> expression COMMA expression TWODOT expression
Rule 92    optionList -> expression COMMA stringList
Rule 93    optionList -> empty
Rule 94    stringList -> String
Rule 95    stringList -> stringList COMMA expression
Rule 96    stringList -> stringList COMMA String
Rule 97    stringList -> stringList COMMA boolean
Rule 98    stringList -> stringList COMMA array
Rule 99    stringList -> boolean COMMA String
Rule 100   stringList -> expression COMMA String
Rule 101   stringList -> array COMMA String
Rule 102   String -> TEXT
Rule 103   String -> String TIMES TEXT
Rule 104   String -> String TIMES ID
Rule 105   boolean -> true
Rule 106   boolean -> false
Rule 107   array -> LSQUARE arrayList RSQUARE
Rule 108   array -> LSQUARE numberList SEMMICOLOM numberList RSQUARE
Rule 109   arrayList -> expression
Rule 110   arrayList -> String
Rule 111   arrayList -> boolean
Rule 112   arrayList -> LSQUARE arrayList RSQUARE
Rule 113   arrayList -> arrayList COMMA expression
Rule 114   arrayList -> arrayList COMMA String
Rule 115   arrayList -> arrayList COMMA boolean
Rule 116   arrayList -> arrayList COMMA LSQUARE arrayList RSQUARE
Rule 117   numberList -> NUMBER
Rule 118   numberList -> numberList NUMBER
Rule 119   funcVecList -> maximum
Rule 120   funcVecList -> minimum
Rule 121   funcVecList -> findmax
Rule 122   funcVecList -> findmin
Rule 123   funcVecList -> length
Rule 124   funcVecList -> sort
Rule 125   funcVecList -> sortrows
Rule 126   funcVecList -> sum
Rule 127   funcVecList -> prod
Rule 128   funcVecList -> cumsum
Rule 129   funcVecList -> cumprod
Rule 130   funcVecList -> mean
Rule 131   funcVecList -> std
Rule 132   funcVecList -> median
Rule 133   funcVecList -> var
Rule 134   funcVecList -> cov
Rule 135   funcVecList -> mode
Rule 136   funcVecList -> PUSH
Rule 137   funcVecList -> APPEND
Rule 138   funcVecList -> POP
Rule 139   funcVecList -> SPLICE
Rule 140   empty -> <empty>

Terminals, with rules where they appear

AND                  : 51
APPEND               : 137
ASSIGMINUS           : 54
ASSIGN               : 5 7 8 9 18 19 20 21 22 33
ASSIGPLUS            : 53
COMMA                : 29 89 91 92 95 96 97 98 99 100 101 113 114 115 116
DIVIDE               : 78
EQUAL                : 45
EXPO                 : 79
FLOAT                : 84
GT                   : 48
GTE                  : 50
ID                   : 5 7 8 9 18 19 20 21 22 23 24 25 33 81 85 104
LPARENT              : 15 16 17 18 26 27 28 83 86 87
LSQUARE              : 19 20 21 22 25 85 107 108 112 116
LT                   : 47
LTE                  : 49
MINUS                : 62
MOD                  : 80
NE                   : 46
NOT                  : 40
NUMBER               : 82 117 118
OR                   : 52
PLUS                 : 61
POP                  : 138
PUSH                 : 136
RPARENT              : 15 16 17 18 26 27 28 83 86 87
RSQUARE              : 19 20 21 22 25 85 107 108 112 116
SEMMICOLOM           : 108
SHOW                 : 57
SPLICE               : 139
Statistics           : 31
StatsBase            : 32
TEXT                 : 102 103
TIMES                : 77 103 104
TWODOT               : 33 91
abs                  : 69
cos                  : 66
cov                  : 134
cumprod              : 129
cumsum               : 128
else                 : 11 12
elseif               : 35 36
end                  : 10 11 12 13 14
error                : 
exp                  : 67
false                : 106
findmax              : 121
findmin              : 122
for                  : 13
if                   : 10 11 12
in                   : 34
length               : 123
log                  : 68
maximum              : 119
mean                 : 130
median               : 132
minimum              : 120
mode                 : 135
parse                : 75
print                : 56
println              : 55
prod                 : 127
rand                 : 73
readline             : 18
round                : 71
sign                 : 72
sin                  : 65
sort                 : 124
sortrows             : 125
sqrt                 : 70
std                  : 131
string               : 76
sum                  : 126
true                 : 105
using                : 6
var                  : 133
while                : 14
zeros                : 74

Nonterminals, with rules where they appear

String               : 94 96 99 100 101 103 104 110 114
addingOperator       : 59 60
array                : 9 22 26 44 90 98 101
arrayIdList          : 19 20 21 22 25
arrayList            : 107 112 113 114 115 116 116
assigList            : 24 25
block                : 1
boolean              : 8 17 21 43 97 99 111 115
comparables          : 39 39 40
condition            : 37 38
conditionList        : 10 11 12 14 35 36 38
elseifList           : 12 36
empty                : 93
expression           : 5 16 19 24 25 29 29 30 33 33 34 34 41 60 85 88 89 89 91 91 91 92 95 100 109 113
factor               : 63 64
funcList             : 27 86
funcVecList          : 28 87
iterable             : 13
libreries            : 6
logicRelation        : 38
multiplyingOperator  : 64
numberList           : 108 108 118
optionList           : 27 28 83 86 87
printList            : 15 16 17 26
program              : 0
relation             : 39
statement            : 3 4
statementList        : 2 4 10 11 11 12 12 13 14 35 36
stringList           : 7 15 20 42 92 95 96 97 98
term                 : 58 59 60 64

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . statementList
    (3) statementList -> . statement
    (4) statementList -> . statementList statement
    (5) statement -> . ID ASSIGN expression
    (6) statement -> . using libreries
    (7) statement -> . ID ASSIGN stringList
    (8) statement -> . ID ASSIGN boolean
    (9) statement -> . ID ASSIGN array
    (10) statement -> . if conditionList statementList end
    (11) statement -> . if conditionList statementList else statementList end
    (12) statement -> . if conditionList statementList elseifList else statementList end
    (13) statement -> . for iterable statementList end
    (14) statement -> . while conditionList statementList end
    (15) statement -> . printList LPARENT stringList RPARENT
    (16) statement -> . printList LPARENT expression RPARENT
    (17) statement -> . printList LPARENT boolean RPARENT
    (18) statement -> . ID ASSIGN readline LPARENT RPARENT
    (19) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN expression
    (20) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN stringList
    (21) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN boolean
    (22) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN array
    (23) statement -> . ID
    (24) statement -> . ID assigList expression
    (25) statement -> . ID LSQUARE arrayIdList RSQUARE assigList expression
    (26) statement -> . printList LPARENT array RPARENT
    (27) statement -> . funcList LPARENT optionList RPARENT
    (28) statement -> . funcVecList LPARENT optionList RPARENT
    (55) printList -> . println
    (56) printList -> . print
    (57) printList -> . SHOW
    (65) funcList -> . sin
    (66) funcList -> . cos
    (67) funcList -> . exp
    (68) funcList -> . log
    (69) funcList -> . abs
    (70) funcList -> . sqrt
    (71) funcList -> . round
    (72) funcList -> . sign
    (73) funcList -> . rand
    (74) funcList -> . zeros
    (75) funcList -> . parse
    (76) funcList -> . string
    (119) funcVecList -> . maximum
    (120) funcVecList -> . minimum
    (121) funcVecList -> . findmax
    (122) funcVecList -> . findmin
    (123) funcVecList -> . length
    (124) funcVecList -> . sort
    (125) funcVecList -> . sortrows
    (126) funcVecList -> . sum
    (127) funcVecList -> . prod
    (128) funcVecList -> . cumsum
    (129) funcVecList -> . cumprod
    (130) funcVecList -> . mean
    (131) funcVecList -> . std
    (132) funcVecList -> . median
    (133) funcVecList -> . var
    (134) funcVecList -> . cov
    (135) funcVecList -> . mode
    (136) funcVecList -> . PUSH
    (137) funcVecList -> . APPEND
    (138) funcVecList -> . POP
    (139) funcVecList -> . SPLICE

    ID              shift and go to state 5
    using           shift and go to state 6
    if              shift and go to state 7
    for             shift and go to state 8
    while           shift and go to state 9
    println         shift and go to state 13
    print           shift and go to state 14
    SHOW            shift and go to state 15
    sin             shift and go to state 16
    cos             shift and go to state 17
    exp             shift and go to state 18
    log             shift and go to state 19
    abs             shift and go to state 20
    sqrt            shift and go to state 21
    round           shift and go to state 22
    sign            shift and go to state 23
    rand            shift and go to state 24
    zeros           shift and go to state 25
    parse           shift and go to state 26
    string          shift and go to state 27
    maximum         shift and go to state 28
    minimum         shift and go to state 29
    findmax         shift and go to state 30
    findmin         shift and go to state 31
    length          shift and go to state 32
    sort            shift and go to state 33
    sortrows        shift and go to state 34
    sum             shift and go to state 35
    prod            shift and go to state 36
    cumsum          shift and go to state 37
    cumprod         shift and go to state 38
    mean            shift and go to state 39
    std             shift and go to state 40
    median          shift and go to state 41
    var             shift and go to state 42
    cov             shift and go to state 43
    mode            shift and go to state 44
    PUSH            shift and go to state 45
    APPEND          shift and go to state 46
    POP             shift and go to state 47
    SPLICE          shift and go to state 48

    program                        shift and go to state 1
    block                          shift and go to state 2
    statementList                  shift and go to state 3
    statement                      shift and go to state 4
    printList                      shift and go to state 10
    funcList                       shift and go to state 11
    funcVecList                    shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> statementList .
    (4) statementList -> statementList . statement
    (5) statement -> . ID ASSIGN expression
    (6) statement -> . using libreries
    (7) statement -> . ID ASSIGN stringList
    (8) statement -> . ID ASSIGN boolean
    (9) statement -> . ID ASSIGN array
    (10) statement -> . if conditionList statementList end
    (11) statement -> . if conditionList statementList else statementList end
    (12) statement -> . if conditionList statementList elseifList else statementList end
    (13) statement -> . for iterable statementList end
    (14) statement -> . while conditionList statementList end
    (15) statement -> . printList LPARENT stringList RPARENT
    (16) statement -> . printList LPARENT expression RPARENT
    (17) statement -> . printList LPARENT boolean RPARENT
    (18) statement -> . ID ASSIGN readline LPARENT RPARENT
    (19) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN expression
    (20) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN stringList
    (21) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN boolean
    (22) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN array
    (23) statement -> . ID
    (24) statement -> . ID assigList expression
    (25) statement -> . ID LSQUARE arrayIdList RSQUARE assigList expression
    (26) statement -> . printList LPARENT array RPARENT
    (27) statement -> . funcList LPARENT optionList RPARENT
    (28) statement -> . funcVecList LPARENT optionList RPARENT
    (55) printList -> . println
    (56) printList -> . print
    (57) printList -> . SHOW
    (65) funcList -> . sin
    (66) funcList -> . cos
    (67) funcList -> . exp
    (68) funcList -> . log
    (69) funcList -> . abs
    (70) funcList -> . sqrt
    (71) funcList -> . round
    (72) funcList -> . sign
    (73) funcList -> . rand
    (74) funcList -> . zeros
    (75) funcList -> . parse
    (76) funcList -> . string
    (119) funcVecList -> . maximum
    (120) funcVecList -> . minimum
    (121) funcVecList -> . findmax
    (122) funcVecList -> . findmin
    (123) funcVecList -> . length
    (124) funcVecList -> . sort
    (125) funcVecList -> . sortrows
    (126) funcVecList -> . sum
    (127) funcVecList -> . prod
    (128) funcVecList -> . cumsum
    (129) funcVecList -> . cumprod
    (130) funcVecList -> . mean
    (131) funcVecList -> . std
    (132) funcVecList -> . median
    (133) funcVecList -> . var
    (134) funcVecList -> . cov
    (135) funcVecList -> . mode
    (136) funcVecList -> . PUSH
    (137) funcVecList -> . APPEND
    (138) funcVecList -> . POP
    (139) funcVecList -> . SPLICE

    $end            reduce using rule 2 (block -> statementList .)
    ID              shift and go to state 5
    using           shift and go to state 6
    if              shift and go to state 7
    for             shift and go to state 8
    while           shift and go to state 9
    println         shift and go to state 13
    print           shift and go to state 14
    SHOW            shift and go to state 15
    sin             shift and go to state 16
    cos             shift and go to state 17
    exp             shift and go to state 18
    log             shift and go to state 19
    abs             shift and go to state 20
    sqrt            shift and go to state 21
    round           shift and go to state 22
    sign            shift and go to state 23
    rand            shift and go to state 24
    zeros           shift and go to state 25
    parse           shift and go to state 26
    string          shift and go to state 27
    maximum         shift and go to state 28
    minimum         shift and go to state 29
    findmax         shift and go to state 30
    findmin         shift and go to state 31
    length          shift and go to state 32
    sort            shift and go to state 33
    sortrows        shift and go to state 34
    sum             shift and go to state 35
    prod            shift and go to state 36
    cumsum          shift and go to state 37
    cumprod         shift and go to state 38
    mean            shift and go to state 39
    std             shift and go to state 40
    median          shift and go to state 41
    var             shift and go to state 42
    cov             shift and go to state 43
    mode            shift and go to state 44
    PUSH            shift and go to state 45
    APPEND          shift and go to state 46
    POP             shift and go to state 47
    SPLICE          shift and go to state 48

    statement                      shift and go to state 49
    printList                      shift and go to state 10
    funcList                       shift and go to state 11
    funcVecList                    shift and go to state 12

state 4

    (3) statementList -> statement .

    ID              reduce using rule 3 (statementList -> statement .)
    using           reduce using rule 3 (statementList -> statement .)
    if              reduce using rule 3 (statementList -> statement .)
    for             reduce using rule 3 (statementList -> statement .)
    while           reduce using rule 3 (statementList -> statement .)
    println         reduce using rule 3 (statementList -> statement .)
    print           reduce using rule 3 (statementList -> statement .)
    SHOW            reduce using rule 3 (statementList -> statement .)
    sin             reduce using rule 3 (statementList -> statement .)
    cos             reduce using rule 3 (statementList -> statement .)
    exp             reduce using rule 3 (statementList -> statement .)
    log             reduce using rule 3 (statementList -> statement .)
    abs             reduce using rule 3 (statementList -> statement .)
    sqrt            reduce using rule 3 (statementList -> statement .)
    round           reduce using rule 3 (statementList -> statement .)
    sign            reduce using rule 3 (statementList -> statement .)
    rand            reduce using rule 3 (statementList -> statement .)
    zeros           reduce using rule 3 (statementList -> statement .)
    parse           reduce using rule 3 (statementList -> statement .)
    string          reduce using rule 3 (statementList -> statement .)
    maximum         reduce using rule 3 (statementList -> statement .)
    minimum         reduce using rule 3 (statementList -> statement .)
    findmax         reduce using rule 3 (statementList -> statement .)
    findmin         reduce using rule 3 (statementList -> statement .)
    length          reduce using rule 3 (statementList -> statement .)
    sort            reduce using rule 3 (statementList -> statement .)
    sortrows        reduce using rule 3 (statementList -> statement .)
    sum             reduce using rule 3 (statementList -> statement .)
    prod            reduce using rule 3 (statementList -> statement .)
    cumsum          reduce using rule 3 (statementList -> statement .)
    cumprod         reduce using rule 3 (statementList -> statement .)
    mean            reduce using rule 3 (statementList -> statement .)
    std             reduce using rule 3 (statementList -> statement .)
    median          reduce using rule 3 (statementList -> statement .)
    var             reduce using rule 3 (statementList -> statement .)
    cov             reduce using rule 3 (statementList -> statement .)
    mode            reduce using rule 3 (statementList -> statement .)
    PUSH            reduce using rule 3 (statementList -> statement .)
    APPEND          reduce using rule 3 (statementList -> statement .)
    POP             reduce using rule 3 (statementList -> statement .)
    SPLICE          reduce using rule 3 (statementList -> statement .)
    $end            reduce using rule 3 (statementList -> statement .)
    end             reduce using rule 3 (statementList -> statement .)
    else            reduce using rule 3 (statementList -> statement .)
    elseif          reduce using rule 3 (statementList -> statement .)


state 5

    (5) statement -> ID . ASSIGN expression
    (7) statement -> ID . ASSIGN stringList
    (8) statement -> ID . ASSIGN boolean
    (9) statement -> ID . ASSIGN array
    (18) statement -> ID . ASSIGN readline LPARENT RPARENT
    (19) statement -> ID . LSQUARE arrayIdList RSQUARE ASSIGN expression
    (20) statement -> ID . LSQUARE arrayIdList RSQUARE ASSIGN stringList
    (21) statement -> ID . LSQUARE arrayIdList RSQUARE ASSIGN boolean
    (22) statement -> ID . LSQUARE arrayIdList RSQUARE ASSIGN array
    (23) statement -> ID .
    (24) statement -> ID . assigList expression
    (25) statement -> ID . LSQUARE arrayIdList RSQUARE assigList expression
    (53) assigList -> . ASSIGPLUS
    (54) assigList -> . ASSIGMINUS

    ASSIGN          shift and go to state 50
    LSQUARE         shift and go to state 51
    ID              reduce using rule 23 (statement -> ID .)
    using           reduce using rule 23 (statement -> ID .)
    if              reduce using rule 23 (statement -> ID .)
    for             reduce using rule 23 (statement -> ID .)
    while           reduce using rule 23 (statement -> ID .)
    println         reduce using rule 23 (statement -> ID .)
    print           reduce using rule 23 (statement -> ID .)
    SHOW            reduce using rule 23 (statement -> ID .)
    sin             reduce using rule 23 (statement -> ID .)
    cos             reduce using rule 23 (statement -> ID .)
    exp             reduce using rule 23 (statement -> ID .)
    log             reduce using rule 23 (statement -> ID .)
    abs             reduce using rule 23 (statement -> ID .)
    sqrt            reduce using rule 23 (statement -> ID .)
    round           reduce using rule 23 (statement -> ID .)
    sign            reduce using rule 23 (statement -> ID .)
    rand            reduce using rule 23 (statement -> ID .)
    zeros           reduce using rule 23 (statement -> ID .)
    parse           reduce using rule 23 (statement -> ID .)
    string          reduce using rule 23 (statement -> ID .)
    maximum         reduce using rule 23 (statement -> ID .)
    minimum         reduce using rule 23 (statement -> ID .)
    findmax         reduce using rule 23 (statement -> ID .)
    findmin         reduce using rule 23 (statement -> ID .)
    length          reduce using rule 23 (statement -> ID .)
    sort            reduce using rule 23 (statement -> ID .)
    sortrows        reduce using rule 23 (statement -> ID .)
    sum             reduce using rule 23 (statement -> ID .)
    prod            reduce using rule 23 (statement -> ID .)
    cumsum          reduce using rule 23 (statement -> ID .)
    cumprod         reduce using rule 23 (statement -> ID .)
    mean            reduce using rule 23 (statement -> ID .)
    std             reduce using rule 23 (statement -> ID .)
    median          reduce using rule 23 (statement -> ID .)
    var             reduce using rule 23 (statement -> ID .)
    cov             reduce using rule 23 (statement -> ID .)
    mode            reduce using rule 23 (statement -> ID .)
    PUSH            reduce using rule 23 (statement -> ID .)
    APPEND          reduce using rule 23 (statement -> ID .)
    POP             reduce using rule 23 (statement -> ID .)
    SPLICE          reduce using rule 23 (statement -> ID .)
    $end            reduce using rule 23 (statement -> ID .)
    end             reduce using rule 23 (statement -> ID .)
    else            reduce using rule 23 (statement -> ID .)
    elseif          reduce using rule 23 (statement -> ID .)
    ASSIGPLUS       shift and go to state 53
    ASSIGMINUS      shift and go to state 54

    assigList                      shift and go to state 52

state 6

    (6) statement -> using . libreries
    (31) libreries -> . Statistics
    (32) libreries -> . StatsBase

    Statistics      shift and go to state 56
    StatsBase       shift and go to state 57

    libreries                      shift and go to state 55

state 7

    (10) statement -> if . conditionList statementList end
    (11) statement -> if . conditionList statementList else statementList end
    (12) statement -> if . conditionList statementList elseifList else statementList end
    (37) conditionList -> . condition
    (38) conditionList -> . conditionList logicRelation condition
    (39) condition -> . comparables relation comparables
    (40) condition -> . NOT comparables
    (41) comparables -> . expression
    (42) comparables -> . stringList
    (43) comparables -> . boolean
    (44) comparables -> . array
    (58) expression -> . term
    (59) expression -> . addingOperator term
    (60) expression -> . expression addingOperator term
    (94) stringList -> . String
    (95) stringList -> . stringList COMMA expression
    (96) stringList -> . stringList COMMA String
    (97) stringList -> . stringList COMMA boolean
    (98) stringList -> . stringList COMMA array
    (99) stringList -> . boolean COMMA String
    (100) stringList -> . expression COMMA String
    (101) stringList -> . array COMMA String
    (105) boolean -> . true
    (106) boolean -> . false
    (107) array -> . LSQUARE arrayList RSQUARE
    (108) array -> . LSQUARE numberList SEMMICOLOM numberList RSQUARE
    (63) term -> . factor
    (64) term -> . term multiplyingOperator factor
    (61) addingOperator -> . PLUS
    (62) addingOperator -> . MINUS
    (102) String -> . TEXT
    (103) String -> . String TIMES TEXT
    (104) String -> . String TIMES ID
    (81) factor -> . ID
    (82) factor -> . NUMBER
    (83) factor -> . LPARENT optionList RPARENT
    (84) factor -> . FLOAT
    (85) factor -> . ID LSQUARE expression RSQUARE
    (86) factor -> . funcList LPARENT optionList RPARENT
    (87) factor -> . funcVecList LPARENT optionList RPARENT
    (65) funcList -> . sin
    (66) funcList -> . cos
    (67) funcList -> . exp
    (68) funcList -> . log
    (69) funcList -> . abs
    (70) funcList -> . sqrt
    (71) funcList -> . round
    (72) funcList -> . sign
    (73) funcList -> . rand
    (74) funcList -> . zeros
    (75) funcList -> . parse
    (76) funcList -> . string
    (119) funcVecList -> . maximum
    (120) funcVecList -> . minimum
    (121) funcVecList -> . findmax
    (122) funcVecList -> . findmin
    (123) funcVecList -> . length
    (124) funcVecList -> . sort
    (125) funcVecList -> . sortrows
    (126) funcVecList -> . sum
    (127) funcVecList -> . prod
    (128) funcVecList -> . cumsum
    (129) funcVecList -> . cumprod
    (130) funcVecList -> . mean
    (131) funcVecList -> . std
    (132) funcVecList -> . median
    (133) funcVecList -> . var
    (134) funcVecList -> . cov
    (135) funcVecList -> . mode
    (136) funcVecList -> . PUSH
    (137) funcVecList -> . APPEND
    (138) funcVecList -> . POP
    (139) funcVecList -> . SPLICE

    NOT             shift and go to state 61
    true            shift and go to state 69
    false           shift and go to state 70
    LSQUARE         shift and go to state 71
    PLUS            shift and go to state 73
    MINUS           shift and go to state 74
    TEXT            shift and go to state 75
    ID              shift and go to state 76
    NUMBER          shift and go to state 77
    LPARENT         shift and go to state 78
    FLOAT           shift and go to state 79
    sin             shift and go to state 16
    cos             shift and go to state 17
    exp             shift and go to state 18
    log             shift and go to state 19
    abs             shift and go to state 20
    sqrt            shift and go to state 21
    round           shift and go to state 22
    sign            shift and go to state 23
    rand            shift and go to state 24
    zeros           shift and go to state 25
    parse           shift and go to state 26
    string          shift and go to state 27
    maximum         shift and go to state 28
    minimum         shift and go to state 29
    findmax         shift and go to state 30
    findmin         shift and go to state 31
    length          shift and go to state 32
    sort            shift and go to state 33
    sortrows        shift and go to state 34
    sum             shift and go to state 35
    prod            shift and go to state 36
    cumsum          shift and go to state 37
    cumprod         shift and go to state 38
    mean            shift and go to state 39
    std             shift and go to state 40
    median          shift and go to state 41
    var             shift and go to state 42
    cov             shift and go to state 43
    mode            shift and go to state 44
    PUSH            shift and go to state 45
    APPEND          shift and go to state 46
    POP             shift and go to state 47
    SPLICE          shift and go to state 48

    conditionList                  shift and go to state 58
    condition                      shift and go to state 59
    comparables                    shift and go to state 60
    expression                     shift and go to state 62
    stringList                     shift and go to state 63
    boolean                        shift and go to state 64
    array                          shift and go to state 65
    term                           shift and go to state 66
    addingOperator                 shift and go to state 67
    String                         shift and go to state 68
    factor                         shift and go to state 72
    funcList                       shift and go to state 80
    funcVecList                    shift and go to state 81

state 8

    (13) statement -> for . iterable statementList end
    (33) iterable -> . ID ASSIGN expression TWODOT expression
    (34) iterable -> . expression in expression
    (58) expression -> . term
    (59) expression -> . addingOperator term
    (60) expression -> . expression addingOperator term
    (63) term -> . factor
    (64) term -> . term multiplyingOperator factor
    (61) addingOperator -> . PLUS
    (62) addingOperator -> . MINUS
    (81) factor -> . ID
    (82) factor -> . NUMBER
    (83) factor -> . LPARENT optionList RPARENT
    (84) factor -> . FLOAT
    (85) factor -> . ID LSQUARE expression RSQUARE
    (86) factor -> . funcList LPARENT optionList RPARENT
    (87) factor -> . funcVecList LPARENT optionList RPARENT
    (65) funcList -> . sin
    (66) funcList -> . cos
    (67) funcList -> . exp
    (68) funcList -> . log
    (69) funcList -> . abs
    (70) funcList -> . sqrt
    (71) funcList -> . round
    (72) funcList -> . sign
    (73) funcList -> . rand
    (74) funcList -> . zeros
    (75) funcList -> . parse
    (76) funcList -> . string
    (119) funcVecList -> . maximum
    (120) funcVecList -> . minimum
    (121) funcVecList -> . findmax
    (122) funcVecList -> . findmin
    (123) funcVecList -> . length
    (124) funcVecList -> . sort
    (125) funcVecList -> . sortrows
    (126) funcVecList -> . sum
    (127) funcVecList -> . prod
    (128) funcVecList -> . cumsum
    (129) funcVecList -> . cumprod
    (130) funcVecList -> . mean
    (131) funcVecList -> . std
    (132) funcVecList -> . median
    (133) funcVecList -> . var
    (134) funcVecList -> . cov
    (135) funcVecList -> . mode
    (136) funcVecList -> . PUSH
    (137) funcVecList -> . APPEND
    (138) funcVecList -> . POP
    (139) funcVecList -> . SPLICE

    ID              shift and go to state 83
    PLUS            shift and go to state 73
    MINUS           shift and go to state 74
    NUMBER          shift and go to state 77
    LPARENT         shift and go to state 78
    FLOAT           shift and go to state 79
    sin             shift and go to state 16
    cos             shift and go to state 17
    exp             shift and go to state 18
    log             shift and go to state 19
    abs             shift and go to state 20
    sqrt            shift and go to state 21
    round           shift and go to state 22
    sign            shift and go to state 23
    rand            shift and go to state 24
    zeros           shift and go to state 25
    parse           shift and go to state 26
    string          shift and go to state 27
    maximum         shift and go to state 28
    minimum         shift and go to state 29
    findmax         shift and go to state 30
    findmin         shift and go to state 31
    length          shift and go to state 32
    sort            shift and go to state 33
    sortrows        shift and go to state 34
    sum             shift and go to state 35
    prod            shift and go to state 36
    cumsum          shift and go to state 37
    cumprod         shift and go to state 38
    mean            shift and go to state 39
    std             shift and go to state 40
    median          shift and go to state 41
    var             shift and go to state 42
    cov             shift and go to state 43
    mode            shift and go to state 44
    PUSH            shift and go to state 45
    APPEND          shift and go to state 46
    POP             shift and go to state 47
    SPLICE          shift and go to state 48

    iterable                       shift and go to state 82
    expression                     shift and go to state 84
    term                           shift and go to state 66
    addingOperator                 shift and go to state 67
    factor                         shift and go to state 72
    funcList                       shift and go to state 80
    funcVecList                    shift and go to state 81

state 9
